--- a/AlgorithamProblem/AlgorithamProblem.csproj
+++ b/AlgorithamProblem/AlgorithamProblem.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="ServiceStack.Common" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
